[gd_scene load_steps=10 format=3 uid="uid://diltk03pcd06o"]

[ext_resource type="Script" path="res://scripts/objects/enemy.gd" id="1_vk5n1"]
[ext_resource type="Material" uid="uid://bd0snpa5pe1is" path="res://materials/placeholder_enemy_mat.tres" id="1_yf8xq"]
[ext_resource type="Resource" uid="uid://418xfuwe8owy" path="res://resources/placeholder_enemy_stats.tres" id="2_ky4lp"]
[ext_resource type="Script" path="res://scripts/state_machines/basic_fsm.gd" id="4_hy7xf"]
[ext_resource type="Script" path="res://resource_defs/fsm_descriptor.gd" id="5_vcskn"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_qbihu"]
material = ExtResource("1_yf8xq")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_crtr3"]

[sub_resource type="BoxMesh" id="BoxMesh_o630u"]
material = ExtResource("1_yf8xq")
size = Vector3(0.3, 0.3, 0.3)

[sub_resource type="Resource" id="Resource_g10n3"]
script = ExtResource("5_vcskn")
fsm_name = "enemy"
root_path = "scripts/state_machines"
registered_states = {
"initial": {
"conditions": [],
"path": "initial",
"transition": null
}
}

[node name="enemy" type="CharacterBody3D" groups=["enemy"]]
collision_layer = 2
collision_mask = 7
script = ExtResource("1_vk5n1")
enemy_stats = ExtResource("2_ky4lp")

[node name="mesh" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_qbihu")

[node name="col_body" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_crtr3")

[node name="pointer_mesh" type="MeshInstance3D" parent="."]
editor_description = "Placeholder indicator to distinguish the \"front\" of the enemy
"
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.752974, 0, 0)
mesh = SubResource("BoxMesh_o630u")

[node name="mov_decision_timer" type="Timer" parent="."]
process_callback = 0

[node name="behaviour" type="Node" parent="."]
script = ExtResource("4_hy7xf")
fsm_descriptor = SubResource("Resource_g10n3")

[connection signal="timeout" from="mov_decision_timer" to="." method="_on_mov_decision_timer_timeout"]
